# pycatima

./: CMakeLists.txt  README.md  appveyor.yml  pyproject.toml
.github/workflows/: build.yml  test_build.yml
docs/: conf.py  index.rst  install.md
src/: _ext.cpp
